[project]
name = "dot1x-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.3.0",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "cryptography==45.0.5",
    "dotenv==0.9.9",
    "et-xmlfile==2.0.0",
    "future==1.0.0",
    "idna==3.10",
    "invoke==2.2.0",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "netmiko==4.6.0",
    "ntc-templates==7.9.0",
    "numpy==2.3.2",
    "openpyxl==3.1.5",
    "pandas==2.3.2",
    "paramiko==4.0.0",
    "pycparser==2.22",
    "pygments==2.19.2",
    "pynacl==1.5.0",
    "pyserial==3.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "rich==14.1.0",
    "ruamel-yaml==0.18.14",
    "ruamel-yaml-clib==0.2.12",
    "scp==0.15.0",
    "six==1.17.0",
    "textfsm==1.1.3",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "xlsxwriter==3.2.5",
]
